--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,11 @@ click>=8.1.0
 rich>=13.5.0
 tqdm>=4.66.0
 
+# Web scraping
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+
 # Machine Learning (for rankings ML layer)
 xgboost>=2.0.0
 scikit-learn>=1.3.0
