--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ tqdm>=4.66.0
 
 # Web scraping
 requests>=2.31.0
+certifi>=2023.0.0  # SSL certificates for better SSL error handling
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
 
