--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
