Add scikit-learn dependency to rankings workflow

--- a/.github/workflows/calculate-rankings.yml
+++ b/.github/workflows/calculate-rankings.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # Install core dependencies for rankings calculation
-          pip install supabase python-dotenv pandas requests rich certifi numpy
+          pip install supabase python-dotenv pandas requests rich certifi numpy scikit-learn
       
       - name: Calculate Rankings
         env:
