--- a/.github/workflows/calculate-rankings.yml
+++ b/.github/workflows/calculate-rankings.yml
@@ -31,7 +31,7 @@ jobs:
           # Set Python path to include project root
           export PYTHONPATH="${PYTHONPATH}:${PWD}"
           # Run rankings calculation with ML layer and force rebuild
-          python scripts/calculate_rankings.py --ml --force-rebuild || exit 1
+          python scripts/calculate_rankings.py --ml --force-rebuild
       
       - name: Report results
         if: always()
