Add GitHub Actions workflow for weekly Modular11 events scraping and import

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ data/cache/
 # But track sample data
 !data/samples/
 
+# Track backtest results (must come after *.csv)
+!data/backtest_results/
+!data/backtest_results/**/*.csv
+
 # Database
 *.db
 *.sqlite
