--- a/.github/workflows/modular11-events-weekly-scrape.yml
+++ b/.github/workflows/modular11-events-weekly-scrape.yml
@@ -38,20 +38,33 @@ jobs:
       - name: Run Modular11 Events Scraper
         env:
           PYTHONPATH: ${{ github.workspace }}
+        working-directory: scrapers/modular11_scraper
         run: |
-          cd scrapers/modular11_scraper
+          # Verify we're in the right directory (should have scrapy.cfg)
+          if [ ! -f "scrapy.cfg" ]; then
+            echo "ERROR: scrapy.cfg not found. Current directory: $(pwd)"
+            ls -la
+            exit 1
+          fi
+          
           # Scrape all age groups (U13-U17) for events from the last 7 days
           python -m scrapy crawl modular11_events \
             -a age_min=13 \
             -a age_max=17 \
             -a days_back=7
           
-          # Find the most recent CSV file (relative to scrapers/modular11_scraper)
+          # Find the most recent CSV file
+          if [ ! -d "output" ]; then
+            echo "ERROR: output directory not found"
+            exit 1
+          fi
+          
           cd output
-          LATEST_CSV=$(ls -t modular11_results_*.csv | head -n 1)
+          LATEST_CSV=$(ls -t modular11_results_*.csv 2>/dev/null | head -n 1)
           
           if [ -z "$LATEST_CSV" ]; then
             echo "ERROR: No CSV file generated"
+            ls -la output/ || echo "Output directory contents:"
             exit 1
           fi
           
