Fix PYTHONPATH in modular11 events workflow to find modular11_scraper module

--- a/.github/workflows/modular11-events-weekly-scrape.yml
+++ b/.github/workflows/modular11-events-weekly-scrape.yml
@@ -47,6 +47,9 @@ jobs:
             exit 1
           fi
           
+          # Add current directory to PYTHONPATH so Scrapy can find modular11_scraper module
+          export PYTHONPATH="${PYTHONPATH}:$(pwd)"
+          
           # Scrape all age groups (U13-U17) for events from the last 7 days
           python -m scrapy crawl modular11_events \
             -a age_min=13 \
