Add current directory to PYTHONPATH for modular11 weekly scraper

--- a/.github/workflows/modular11-weekly-scrape.yml
+++ b/.github/workflows/modular11-weekly-scrape.yml
@@ -40,6 +40,10 @@ jobs:
           PYTHONPATH: ${{ github.workspace }}
         run: |
           cd scrapers/modular11_scraper
+          
+          # Add current directory to PYTHONPATH so Scrapy can find modular11_scraper module
+          export PYTHONPATH="${PYTHONPATH}:$(pwd)"
+          
           # Scrape all age groups (U13-U17) for the last 7 days
           # Scrape both HD and AD divisions
           python -m scrapy crawl modular11_schedule \
