Fix PYTHONPATH by setting scraper directory in env section instead of export

--- a/.github/workflows/modular11-events-weekly-scrape.yml
+++ b/.github/workflows/modular11-events-weekly-scrape.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Run Modular11 Events Scraper
         env:
-          PYTHONPATH: ${{ github.workspace }}
+          PYTHONPATH: ${{ github.workspace }}:${{ github.workspace }}/scrapers/modular11_scraper
         run: |
           cd scrapers/modular11_scraper
           
@@ -47,9 +47,6 @@ jobs:
             ls -la
             exit 1
           fi
-          
-          # Add current directory to PYTHONPATH so Scrapy can find modular11_scraper module
-          export PYTHONPATH="${PYTHONPATH}:$(pwd)"
           
           # Scrape all age groups (U13-U17) for events from the last 21 days
           python -m scrapy crawl modular11_events \
