Fix: Use correct GitHub secret name SUPABASE_SERVICE_KEY instead of SUPABASE_SERVICE_ROLE_KEY

--- a/.github/workflows/modular11-events-weekly-scrape.yml
+++ b/.github/workflows/modular11-events-weekly-scrape.yml
@@ -77,9 +77,9 @@ jobs:
       - name: Import Games
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           PYTHONPATH: ${{ github.workspace }}
         run: |
