Fix TGS direct ID matching and update GitHub Action
- Fix tgs_matcher.py to use 'direct_id' match_method for new teams with provider_team_id
- Override _match_by_provider_id() to skip age_group validation for TGS (provider_team_id is unique per team)
- Add maintain_tgs_direct_id_aliases.py script to keep aliases up-to-date
- Add update_tgs_aliases_to_direct_id.py migration script
- Add TGS_DIRECT_ID_MAINTENANCE.md documentation
- Update GitHub Action to run maintenance script after import

--- a/.github/workflows/tgs-event-scrape-import.yml
+++ b/.github/workflows/tgs-event-scrape-import.yml
@@ -108,6 +108,18 @@ jobs:
           echo "Importing games from: $CSV_FILE"
           python scripts/import_games_enhanced.py "$CSV_FILE" tgs
 
+      - name: Maintain TGS Direct ID Aliases
+        if: ${{ github.event_name == 'schedule' || inputs.skip_import == false }}
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+          PYTHONPATH: ${{ github.workspace }}
+        run: |
+          export PYTHONPATH="${PYTHONPATH}:${PWD}"
+          echo "Maintaining TGS direct ID aliases..."
+          python scripts/maintain_tgs_direct_id_aliases.py
+
       - name: Upload scraped data
         if: always()
         uses: actions/upload-artifact@v4
